# Carla-autoware_interface

./: README.md  autoware.rviz  bridge_install_script.sh  carla_interface_with_preprocessor.launch.py  carla_pointcloud_preprocessor.launch.py  imu_relay.py  relay_all.sh  teleop_key.py
asset/: xodr_to_osm.py
asset/map_asset/parkinglot2/: parkinglot2.umap
asset/parkinglot2/: lanelet2_map.osm  parkinglot2.xodr
asset/vehicle_model/Vehicles/: MKmini3.tar.xz
autoware_carla_interface/: setup.py
autoware_carla_interface/calibration_maps/: accel_map.csv  brake_map.csv
autoware_carla_interface/config/: raw_vehicle_cmd_converter.param.yaml
autoware_carla_interface/config/carla_sensor_kit_description/: sensor_kit_calibration.yaml  sensor_kit_calibration_or.yaml
autoware_carla_interface/config/vehicle/: vehicle_info.param.yaml
autoware_carla_interface/launch/: autoware_carla_interface.launch.xml
autoware_carla_interface/src/autoware_carla_interface/: carla_ros.py
autoware_carla_interface/src/autoware_carla_interface/modules/: carla_utils.py  sensor_kit_loader.py
bridge_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
bridge_ws/install/carla_autonomy_bridge/share/carla_autonomy_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bridge_ws/install/carla_autonomy_bridge/share/carla_autonomy_bridge/launch/: bridge_with_relays.launch.py  carla_interface_with_preprocessor.launch.py  carla_pointcloud_preprocessor.launch.py  relays.launch.py
bridge_ws/log/: latest_build  latest_list
bridge_ws/src/carla_autonomy_bridge/: README.md  setup.cfg  setup.py
bridge_ws/src/carla_autoware_type_bridge/: CMakeLists.txt
bridge_ws/src/carla_autoware_type_bridge/launch/: bridges.launch.py
bridge_ws/src/carla_autoware_type_bridge/src/: control_cmd_bridge_node.cpp  vehicle_status_bridge_node.cpp
msg_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
msg_ws/log/: latest_build
(+1682 files in other folders)
