<?xml version="1.0"?>
<package format="3">
  <name>carla_autonomy_bridge</name>
  <version>0.1.0</version>
  <description>CARLA <-> Autoware bridge helpers and relays.</description>
  <maintainer email="a01004@local">a01004</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <exec_depend>autoware_global_parameter_loader</exec_depend>
  <exec_depend>pointcloud_preprocessor</exec_depend>
  <exec_depend>carla_autoware_type_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
